# adventofcode2108

./: .gitignore  README.md  adventofcode2018.cabal  getDayInput.sh  stars.txt  stars2 stars2.txt
app/: Main.hs
resources/: input-day15.txt  input-day20.txt  input-day24.txt  solveDay10
src/AOC/Day06DangerAreas/: LeastDangerousArea.hs  MostInclusiveArea.hs
src/AOC/Day07/: BuildingASleigh.hs  challenge.html
src/AOC/Day08/: LicenseTree.hs  challenge.html
src/AOC/Day09/: MarbleGame.hs  challenge.html
src/AOC/Day10/: StarMessage.hs  challenge.html
src/AOC/Day11/: PowerGrid.hs  challenge.html
src/AOC/Day12/: PlantSpreading.hs  challenge.html
src/AOC/Day13/: DeadlyRollercoaster.hs  challenge.html
src/AOC/Day14/: Recipes.hs  challenge.html
src/AOC/Day15/: GoblinSlaying.hs  challenge.html
src/AOC/Day16/: Registers.hs  challenge.html
src/AOC/Day17/: ReservoirResearch.hs  challenge.html
src/AOC/Day18/: Forestry.hs  challenge.html
src/AOC/Day19/: Reversing.hs  challenge.html
src/AOC/Day20/: Doors.hs  challenge.html
src/AOC/Day21/: Day21.hs  challenge.html
src/AOC/Day22/: Spelunking.hs  challenge.html
src/AOC/Day23/: NanoBots.hs  SphereCubeCollisionDetect.hs  Types.hs  challenge.html
src/AOC/Day24/: ImmuneSystemSim.hs  challenge.html
src/AOC/Day25/: Constellations.hs  challenge.html
src/AOC/Util/: Coord3D.hs  Coord4D.hs  Coordinate.hs  Direction.hs  SequenceHelper.hs
src/AOC/day01frequency/: Frequency.hs  RepFrequency.hs
src/AOC/day02boxes/: Checksum.hs
src/AOC/day03claimingfabric/: Overlap.hs
src/AOC/day04sleepyguards/: GuardTimes.hs  challenge.html
src/AOC/day05alchemy/: UnitDestroyer.hs
src/Day06DangerAreas/: LeastDangerousArea.hs  challenge.html
src/day01frequency/: Frequency.hs  RepFrequency.hs
src/day02boxes/: Checksum.hs  IdenticalBox.hs  IdenticalBox2.hs
src/day03claimingfabric/: NoOverLap.hs  Overlap.hs  challenge.html
src/day04/: GuardTimes.hs
src/day04sleepyguards/: GuardTimes.hs
src/day05alchemy/: UnitDestroyer.hs  challenge.html
test/AOC/Day06DangerAreas/: Day06Spec.hs
test/AOC/Day07/: BuildingASleighPart2Spec.hs  BuildingASleighSpec.hs
test/AOC/Day08/: LicenseTreePart2Spec.hs  LicenseTreeSpec.hs
test/AOC/Day09/: MarbleGameSpec.hs
test/AOC/Day10/: StarMessageSpec.hs
test/AOC/Day11/: PowerGridSpec.hs
test/AOC/Day12/: PlantSpreadingSpec.hs
test/AOC/Day13/: DeadlyRollercoasterSpec.hs
test/AOC/Day14/: RecipesSpec.hs
test/AOC/Day15/: GoblinSlayingSpec.hs
test/AOC/Day16/: RegistersSpec.hs
test/AOC/Day17/: ReservoirResearchSpec.hs
test/AOC/Day18/: ForestrySpec.hs
test/AOC/Day19/: ReversingSpec.hs
test/AOC/Day20/: DoorsSpec.hs
test/AOC/Day22/: SpelunkingSpec.hs
test/AOC/Day23/: NanoBotsSpec.hs  SphereCubeCollisionDetectSpec.hs
test/AOC/Day24/: ImmuneSystemSimSpec.hs
test/AOC/Day25/: ConstellationsSpec.hs
test/AOC/Util/: Coord3DSpec.hs  DirectionSpec.hs  SequenceHelperSpec.hs
test/resources/: day19scribbles.txt  day21scribbles.txt
