name:                adventofcode2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/adventofcode2018#readme
license:             BSD3
license-file:        LICENSE
author:              Sjoerd van Houten
maintainer:          sjoerd.van.houten@ximedes.com
copyright:           2018 Sjoerd van Houten
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable adventofcode2018
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode2018
  default-language:    Haskell2010

test-suite adventofcode2018-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , adventofcode2018
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/adventofcode2018
