name:                adventofcode2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/adventofcode2018#readme
license:             BSD3
license-file:        LICENSE
author:              Sjoerd van Houten
maintainer:          sjoerd.van.houten@ximedes.com
copyright:           2018 Sjoerd van Houten
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AOC.Util.Coordinate
                     , AOC.Util.Direction
                     , AOC.Day06DangerAreas.LeastDangerousArea
                     , AOC.Day07.BuildingASleigh
                     , AOC.Day08.LicenseTree
                     , AOC.Day09.MarbleGame
                     , AOC.Day10.StarMessage
                     , AOC.Day11.PowerGrid
                     , AOC.Day12.PlantSpreading
                     , AOC.Day13.DeadlyRollercoaster
                     , AOC.Day14.Recipes
                     , AOC.Day15.GoblinSlaying
                     , AOC.Day16.Registers
                     , AOC.Day17.ReservoirResearch
                     , AOC.Day18.Forestry
                     , AOC.Day19.Reversing
                     , AOC.Day20.Doors
                     , AOC.Util.SequenceHelper
                     , AOC.Day22.Spelunking
  extensions:          ViewPatterns
  build-depends:       base >= 4.7 && < 5, containers, split, pointedlist
  default-language:    Haskell2010

executable adventofcode2018
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode2018
  default-language:    Haskell2010

test-suite adventofcode2018-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       AOC.Day06DangerAreas.Day06Spec
                     , AOC.Day07.BuildingASleighPart2Spec
                     , AOC.Day07.BuildingASleighSpec
                     , AOC.Day08.LicenseTreePart2Spec
                     , AOC.Day08.LicenseTreeSpec
                     , AOC.Day09.MarbleGameSpec
                     , AOC.Day10.StarMessageSpec
                     , AOC.Day11.PowerGridSpec
                     , AOC.Day12.PlantSpreadingSpec
                     , AOC.Day13.DeadlyRollercoasterSpec
                     , AOC.Util.DirectionSpec
                     , AOC.Day14.RecipesSpec
                     , AOC.Day15.GoblinSlayingSpec
                     , AOC.Day16.RegistersSpec
                     , AOC.Day17.ReservoirResearchSpec
                     , AOC.Day18.ForestrySpec
                     , AOC.Day19.ReversingSpec
                     , AOC.Day20.DoorsSpec
                     , AOC.Util.SequenceHelperSpec
                     , AOC.Day22.SpelunkingSpec
  build-depends:       base
                     , adventofcode2018
                     , hspec
                     , QuickCheck
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/adventofcode2018
